# alpha-signal-research-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
reports/: results.csv
src/alpha_lab/: __init__.py  backtest.py  data.py  experiment.py  features.py  metrics.py  plots.py  strategies.py  validation.py
tests/: test_backtest_no_lookahead.py  test_costs.py  test_metrics.py
